--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "is-url": "1.2.4",
-    "mongoose": "8.2.0"
+    "mongoose": "8.2.0",
+    "pg": "^8.12.0"
   },
   "license": "MIT"
 }
